# cc-futures-trading-bot

./: .gitignore  Dockerfile  README.md  app.py  celery_app.py  docker-compose.yml  pyproject.toml  requirements.txt  tasks.py
views/: index.py
